--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,42 @@ Thumbs.db
 *.njsproj
 *.sln
 .vscode/
+# Testing
+coverage/
+.nyc_output/
+
+# Cache directories
+.swc/
+.cache/
+
+# Debug
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+
+# Local Netlify folder
+.netlify
+
+# PWA files
+public/sw.js
+public/workbox-*.js
+public/worker-*.js
+public/sw.js.map
+public/workbox-*.js.map
+public/worker-*.js.map
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Storybook
+storybook-static/
+
+# Testing
+/cypress/videos/
+/cypress/screenshots/
+/playwright-report/
+/test-results/
